--- a/Practicals/05_neural_networks/NN_introduction.ipynb
+++ b/Practicals/05_neural_networks/NN_introduction.ipynb
@@ -2,45 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-04-15T15:38:16.424893Z",
-     "start_time": "2025-04-15T15:38:16.422273Z"
+     "end_time": "2025-04-15T11:50:10.486561Z",
+     "start_time": "2025-04-15T11:50:10.484824Z"
     }
    },
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "from torch.utils.data import Dataset, DataLoader, random_split"
-   ],
-   "outputs": [],
-   "execution_count": 6
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "# Intro to tensors",
-   "id": "6174048944299fb9"
+   "id": "6174048944299fb9",
+   "metadata": {},
+   "source": [
+    "# Intro to tensors"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "62fc21d202fa7d2d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-15T15:38:16.924297Z",
-     "start_time": "2025-04-15T15:38:16.921345Z"
+     "end_time": "2025-04-15T15:35:56.622713Z",
+     "start_time": "2025-04-15T15:35:56.329999Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "# Working with tensors\n",
-    "a = torch.rand(10, 5)\n",
-    "b = torch.rand(5, 17)\n",
-    "mult = torch.matmul(a, b)\n",
-    "print(mult.shape)"
-   ],
-   "id": "62fc21d202fa7d2d",
    "outputs": [
     {
      "name": "stdout",
@@ -50,24 +45,19 @@
      ]
     }
    ],
-   "execution_count": 7
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-04-15T15:38:17.187640Z",
-     "start_time": "2025-04-15T15:38:17.184011Z"
-    }
-   },
-   "cell_type": "code",
    "source": [
-    "# Working with tensors (batch multiplication)\n",
-    "a = torch.rand(16, 10, 5)\n",
-    "b = torch.rand(16, 5, 17)\n",
+    "# Working with tensors\n",
+    "a = torch.rand(10, 5)\n",
+    "b = torch.rand(5, 17)\n",
     "mult = torch.matmul(a, b)\n",
     "print(mult.shape)"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "b4d91e7fc3193251",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -77,16 +67,34 @@
      ]
     }
    ],
-   "execution_count": 8
+   "source": [
+    "# Working with tensors (batch multiplication)\n",
+    "a = torch.rand(16, 10, 5)\n",
+    "b = torch.rand(16, 5, 17)\n",
+    "\n",
+    "mult = torch.matmul(a, b)\n",
+    "print(mult.shape)"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a8c2e65904c7aa67",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-15T15:49:00.657586Z",
-     "start_time": "2025-04-15T15:49:00.650960Z"
+     "end_time": "2025-04-15T11:57:24.870375Z",
+     "start_time": "2025-04-15T11:57:24.867586Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([4., 5., 6.])\n"
+     ]
+    }
+   ],
    "source": [
     "# Gradient example\n",
     "a = torch.Tensor([1, 2, 3])\n",
@@ -98,99 +106,28 @@
     "c.requires_grad = True\n",
     "\n",
     "torch.sum((a * b) + c).backward()\n",
-    "print(a.grad), print(b.grad), print(c.grad)"
-   ],
-   "id": "a8c2e65904c7aa67",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([4., 5., 6.])\n",
-      "tensor([1., 2., 3.])\n",
-      "tensor([1., 1., 1.])\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(None, None, None)"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 29
+    "print(a.grad)"
+   ]
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-04-15T12:34:07.111978Z",
-     "start_time": "2025-04-15T12:34:07.090350Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "a = torch.Tensor(torch.rand(1, 4))\n",
-    "a.requires_grad = True\n",
-    "b = a**2\n",
-    "c = b*2\n",
-    "d = c.mean()\n",
-    "e = c.sum()"
-   ],
-   "id": "8919485bb99e2322",
-   "outputs": [],
-   "execution_count": 2
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-04-15T12:35:46.849237Z",
-     "start_time": "2025-04-15T12:35:46.635194Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "d.backward(retain_graph=True) # fine\n",
-    "e.backward(retain_graph=True) # fine\n",
-    "d.backward() # also fine\n",
-    "e.backward() # error will occur!"
-   ],
-   "id": "a35e7ab770ea873e",
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "Trying to backward through the graph a second time (or directly access saved tensors after they have already been freed). Saved intermediate values of the graph are freed when you call .backward() or autograd.grad(). Specify retain_graph=True if you need to backward through the graph a second time or if you need to access saved tensors after calling backward.",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mRuntimeError\u001B[0m                              Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[4], line 4\u001B[0m\n\u001B[1;32m      2\u001B[0m e\u001B[38;5;241m.\u001B[39mbackward(retain_graph\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m) \u001B[38;5;66;03m# fine\u001B[39;00m\n\u001B[1;32m      3\u001B[0m d\u001B[38;5;241m.\u001B[39mbackward() \u001B[38;5;66;03m# also fine\u001B[39;00m\n\u001B[0;32m----> 4\u001B[0m \u001B[43me\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mbackward\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m \u001B[38;5;66;03m# error will occur!\u001B[39;00m\n",
-      "File \u001B[0;32m~/PycharmProjects/data-science-2/.venv/lib/python3.10/site-packages/torch/_tensor.py:581\u001B[0m, in \u001B[0;36mTensor.backward\u001B[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001B[0m\n\u001B[1;32m    571\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m has_torch_function_unary(\u001B[38;5;28mself\u001B[39m):\n\u001B[1;32m    572\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m handle_torch_function(\n\u001B[1;32m    573\u001B[0m         Tensor\u001B[38;5;241m.\u001B[39mbackward,\n\u001B[1;32m    574\u001B[0m         (\u001B[38;5;28mself\u001B[39m,),\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m    579\u001B[0m         inputs\u001B[38;5;241m=\u001B[39minputs,\n\u001B[1;32m    580\u001B[0m     )\n\u001B[0;32m--> 581\u001B[0m \u001B[43mtorch\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mautograd\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mbackward\u001B[49m\u001B[43m(\u001B[49m\n\u001B[1;32m    582\u001B[0m \u001B[43m    \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mgradient\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mretain_graph\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcreate_graph\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43minputs\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43minputs\u001B[49m\n\u001B[1;32m    583\u001B[0m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m~/PycharmProjects/data-science-2/.venv/lib/python3.10/site-packages/torch/autograd/__init__.py:347\u001B[0m, in \u001B[0;36mbackward\u001B[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001B[0m\n\u001B[1;32m    342\u001B[0m     retain_graph \u001B[38;5;241m=\u001B[39m create_graph\n\u001B[1;32m    344\u001B[0m \u001B[38;5;66;03m# The reason we repeat the same comment below is that\u001B[39;00m\n\u001B[1;32m    345\u001B[0m \u001B[38;5;66;03m# some Python versions print out the first line of a multi-line function\u001B[39;00m\n\u001B[1;32m    346\u001B[0m \u001B[38;5;66;03m# calls in the traceback and some print out the last line\u001B[39;00m\n\u001B[0;32m--> 347\u001B[0m \u001B[43m_engine_run_backward\u001B[49m\u001B[43m(\u001B[49m\n\u001B[1;32m    348\u001B[0m \u001B[43m    \u001B[49m\u001B[43mtensors\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    349\u001B[0m \u001B[43m    \u001B[49m\u001B[43mgrad_tensors_\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    350\u001B[0m \u001B[43m    \u001B[49m\u001B[43mretain_graph\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    351\u001B[0m \u001B[43m    \u001B[49m\u001B[43mcreate_graph\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    352\u001B[0m \u001B[43m    \u001B[49m\u001B[43minputs\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    353\u001B[0m \u001B[43m    \u001B[49m\u001B[43mallow_unreachable\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m,\u001B[49m\n\u001B[1;32m    354\u001B[0m \u001B[43m    \u001B[49m\u001B[43maccumulate_grad\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m,\u001B[49m\n\u001B[1;32m    355\u001B[0m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m~/PycharmProjects/data-science-2/.venv/lib/python3.10/site-packages/torch/autograd/graph.py:825\u001B[0m, in \u001B[0;36m_engine_run_backward\u001B[0;34m(t_outputs, *args, **kwargs)\u001B[0m\n\u001B[1;32m    823\u001B[0m     unregister_hooks \u001B[38;5;241m=\u001B[39m _register_logging_hooks_on_whole_graph(t_outputs)\n\u001B[1;32m    824\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[0;32m--> 825\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mVariable\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_execution_engine\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mrun_backward\u001B[49m\u001B[43m(\u001B[49m\u001B[43m  \u001B[49m\u001B[38;5;66;43;03m# Calls into the C++ engine to run the backward pass\u001B[39;49;00m\n\u001B[1;32m    826\u001B[0m \u001B[43m        \u001B[49m\u001B[43mt_outputs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\n\u001B[1;32m    827\u001B[0m \u001B[43m    \u001B[49m\u001B[43m)\u001B[49m  \u001B[38;5;66;03m# Calls into the C++ engine to run the backward pass\u001B[39;00m\n\u001B[1;32m    828\u001B[0m \u001B[38;5;28;01mfinally\u001B[39;00m:\n\u001B[1;32m    829\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m attach_logging_hooks:\n",
-      "\u001B[0;31mRuntimeError\u001B[0m: Trying to backward through the graph a second time (or directly access saved tensors after they have already been freed). Saved intermediate values of the graph are freed when you call .backward() or autograd.grad(). Specify retain_graph=True if you need to backward through the graph a second time or if you need to access saved tensors after calling backward."
-     ]
-    }
-   ],
-   "execution_count": 4
-  },
-  {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "# Train model",
-   "id": "90c3259b136f7d2a"
+   "id": "90c3259b136f7d2a",
+   "metadata": {},
+   "source": [
+    "# Train model"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4aefc330c00b35ad",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-15T16:30:56.222990Z",
-     "start_time": "2025-04-15T16:30:56.218991Z"
+     "end_time": "2025-04-15T11:54:06.568856Z",
+     "start_time": "2025-04-15T11:54:06.566055Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "# Create random dataset. Every Dataset has to implement __len__ and __getitem__\n",
     "class SyntheticDataset(Dataset):\n",
@@ -203,19 +140,19 @@
     "\n",
     "    def __getitem__(self, idx):\n",
     "        return self.X[idx], self.y[idx]"
-   ],
-   "id": "4aefc330c00b35ad",
-   "outputs": [],
-   "execution_count": 48
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "22e248bec4c2cd2e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-15T16:08:25.489464Z",
-     "start_time": "2025-04-15T16:08:25.485077Z"
+     "end_time": "2025-04-15T11:54:06.989540Z",
+     "start_time": "2025-04-15T11:54:06.986415Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "# Create model\n",
     "class MultiLayerNet(nn.Module):\n",
@@ -224,10 +161,12 @@
     "        self.fc1 = nn.Linear(input_dim, hidden_dims[0])\n",
     "        self.bn1 = nn.BatchNorm1d(hidden_dims[0])\n",
     "        self.activation1 = nn.ReLU()\n",
+    "        self.dropout1 = nn.Dropout(0.3)\n",
     "            \n",
     "        self.fc2 = nn.Linear(hidden_dims[0], hidden_dims[1])\n",
     "        self.bn2 = nn.BatchNorm1d(hidden_dims[1])\n",
     "        self.activation2 = nn.ReLU()\n",
+    "        self.dropout2 = nn.Dropout(0.3)\n",
     "            \n",
     "        self.head = nn.Linear(hidden_dims[1], output_dim)\n",
     "\n",
@@ -235,25 +174,26 @@
     "        x = self.fc1(x)\n",
     "        x = self.bn1(x)\n",
     "        x = self.activation1(x)\n",
+    "        x = self.dropout1(x)\n",
     "        \n",
     "        x = self.fc2(x)\n",
     "        x = self.bn2(x)\n",
     "        x = self.activation2(x)\n",
-    "        x = self.head(x)\n",
+    "        x = self.dropout2(x)\n",
     "        return x"
-   ],
-   "id": "22e248bec4c2cd2e",
-   "outputs": [],
-   "execution_count": 44
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "21f3cdcfe7b47869",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-15T15:56:51.014790Z",
-     "start_time": "2025-04-15T15:56:51.011092Z"
+     "end_time": "2025-04-15T11:54:07.213648Z",
+     "start_time": "2025-04-15T11:54:07.209926Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "# Training loop\n",
     "def train(model, dataloader, criterion, optimizer, device):\n",
@@ -271,19 +211,19 @@
     "        total_loss += loss.item()\n",
     "    avg_loss = total_loss / len(dataloader)\n",
     "    print(f\"Train Loss: {avg_loss:.4f}\")"
-   ],
-   "id": "21f3cdcfe7b47869",
-   "outputs": [],
-   "execution_count": 36
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b11fa2308dcac0b9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-15T15:56:53.023Z",
-     "start_time": "2025-04-15T15:56:53.018704Z"
+     "end_time": "2025-04-15T11:54:07.430997Z",
+     "start_time": "2025-04-15T11:54:07.427050Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "# Validation loop\n",
     "def validate(model, dataloader, criterion, device):\n",
@@ -307,19 +247,19 @@
     "    accuracy = 100.0 * correct / total\n",
     "    print(f\"Validation Loss: {avg_loss:.4f}, Accuracy: {accuracy:.2f}%\")\n",
     "    return avg_loss, accuracy"
-   ],
-   "id": "b11fa2308dcac0b9",
-   "outputs": [],
-   "execution_count": 37
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c48ed16bc6c071f2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-15T15:59:19.621928Z",
-     "start_time": "2025-04-15T15:59:19.617140Z"
+     "end_time": "2025-04-15T11:54:07.667473Z",
+     "start_time": "2025-04-15T11:54:07.663717Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "# Hyperparameters and setup\n",
     "input_dim = 20\n",
@@ -335,45 +275,36 @@
     "\n",
     "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
     "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)"
-   ],
-   "id": "c48ed16bc6c071f2",
-   "outputs": [],
-   "execution_count": 39
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "80dd79a99a811b72",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-15T15:59:21.228906Z",
-     "start_time": "2025-04-15T15:59:19.947504Z"
+     "end_time": "2025-04-15T11:54:07.993138Z",
+     "start_time": "2025-04-15T11:54:07.988384Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "# Model, criterion, optimizer\n",
     "model = MultiLayerNet(input_dim=input_dim).to(device)\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.001, weight_decay=1e-4)"
-   ],
-   "id": "80dd79a99a811b72",
-   "outputs": [],
-   "execution_count": 40
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "af86719ba29d45ba",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-15T15:59:21.304234Z",
-     "start_time": "2025-04-15T15:59:21.229922Z"
+     "end_time": "2025-04-15T11:54:08.369335Z",
+     "start_time": "2025-04-15T11:54:08.293313Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "# Full training + validation loop\n",
-    "for epoch in range(epochs):\n",
-    "    print(f\"\\nEpoch {epoch + 1}/{epochs}\")\n",
-    "    train(model, train_loader, criterion, optimizer, device)\n",
-    "    validate(model, val_loader, criterion, device)"
-   ],
-   "id": "af86719ba29d45ba",
    "outputs": [
     {
      "name": "stdout",
@@ -381,65 +312,71 @@
      "text": [
       "\n",
       "Epoch 1/5\n",
-      "Train Loss: 3.7927\n",
-      "Validation Loss: 3.1987, Accuracy: 20.00%\n",
+      "Train Loss: 3.6770\n",
+      "Validation Loss: 3.2470, Accuracy: 17.50%\n",
       "\n",
       "Epoch 2/5\n",
-      "Train Loss: 3.6044\n",
-      "Validation Loss: 3.2001, Accuracy: 19.00%\n",
+      "Train Loss: 3.4684\n",
+      "Validation Loss: 3.1243, Accuracy: 18.00%\n",
       "\n",
       "Epoch 3/5\n",
-      "Train Loss: 3.4255\n",
-      "Validation Loss: 3.0971, Accuracy: 26.50%\n",
+      "Train Loss: 3.3674\n",
+      "Validation Loss: 3.0556, Accuracy: 22.00%\n",
       "\n",
       "Epoch 4/5\n",
-      "Train Loss: 3.2832\n",
-      "Validation Loss: 3.0110, Accuracy: 28.00%\n",
+      "Train Loss: 3.2725\n",
+      "Validation Loss: 2.9336, Accuracy: 30.00%\n",
       "\n",
       "Epoch 5/5\n",
-      "Train Loss: 3.1521\n",
-      "Validation Loss: 2.8996, Accuracy: 35.00%\n"
+      "Train Loss: 3.1751\n",
+      "Validation Loss: 2.8732, Accuracy: 33.50%\n"
      ]
     }
    ],
-   "execution_count": 41
+   "source": [
+    "# Full training + validation loop\n",
+    "for epoch in range(epochs):\n",
+    "    print(f\"\\nEpoch {epoch + 1}/{epochs}\")\n",
+    "    train(model, train_loader, criterion, optimizer, device)\n",
+    "    validate(model, val_loader, criterion, device)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "7c7163f1683ce090",
+   "metadata": {},
    "source": [
     "# Tasks\n",
     "- add early stopping\n",
     "- play with number of parameters in each layer, activation function and regularization parameters and observe how the training changes"
-   ],
-   "id": "7c7163f1683ce090"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "1e661b19e822874d"
+   "id": "1e661b19e822874d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
